Uploaded image for project: 'Traffic Server'
  1. Traffic Server
  2. TS-191

Missing :port in the Host: header for forward requests to target with non-default port

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Minor
    • Resolution: Fixed
    • None
    • 2.0.0a
    • Core
    • None

    Description

      For requests like:

      GET http://www.example.com:1080/foo.html HTTP/1.0

      TS incorrectly sends "Host: www.example.com" to the origin server.

      Attachments

        1. TS191_sjiang.diff
          4 kB
          Steve Jiang

        Activity

          People

            sjiang Steve Jiang
            sjiang Steve Jiang
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: