TS-191: Missing :port in the Host: header for forward requests to target with non-default port Fixed the header spoofing logic to correctly check and insert the port

Author: Steve Jiang
        Review: Vijaya Mamidi



git-svn-id: https://svn.apache.org/repos/asf/incubator/trafficserver/traffic/trunk@910817 13f79535-47bb-0310-9956-ffa450edef68